# reservation-api

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  init.sql.example  main.py  makefile  minikube_deploy.sh  minikube_local_deploy.sh  mypy.ini  pyproject.toml  pytest.ini  run.py
.github/workflows/: ci-cd.yml  testing.yml
alembic/: env.py
alembic/versions/: 42d8bc2d4864_first_migration.py
config/: config.py
configs/: config.py
k8s/: fastapi-deployment.yaml  fastapi-service.yaml  mysql-deployment.yaml
k8s/api/: fastapi-deployment.yaml  fastapi-service.yaml
k8s/jobs/: alembic-migration.yaml  alembic.sh
k8s/mysql/: mysql-deployment.yaml  mysql-service.yaml
k8s/secrets/: secrets.yaml
src/: __init__.py  conftest.py
src/app/: __init__.py
src/app/fastapi/: __init__.py  create_fast_api_app.py  create_fast_api_app_test.py  main.py
src/app/fastapi_mysql/: __init__.py  create_fast_api_app.py  create_fast_api_app_test.py
src/domain/: __init__.py  account.py  account_test.py  person.py  person_test.py  rol.py  rol_test.py  role.py  role_test.py  session.py  session_test.py
src/domain/entities/: __init__.py  account.py  account_test.py  person.py  person_test.py  role.py  role_test.py
src/domain/interfaces/: __init__.py
src/infra/: __init__.py
src/infra/db_models/: __init__.py  account_model.py  db_base.py  person_model.py  rol_model.py
src/infra/repositories/: __init__.py  account_mysql_repository.py  account_mysql_repository_test.py  login_mysql_repository.py  login_mysql_repository_test.py  (+4 more)
src/infraestructure/: __init__.py
src/interactor/: __init__.py
(+109 files in other folders)
