[tool.poetry]
name = "reservationbackend"
version = "0.1.0"
description = "Backend for a reservation app for demostrate the knowledge acquired in the ioet university 2"
authors = ["Gerardo Rios"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pytest = "^8.2.2"
neo4j = "^5.22.0"
mypy = "^1.10.1"
flake8 = "^7.1.0"
black = "^24.4.2"
uvicorn = "^0.30.1"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
